<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TITULO"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:background="@color/colorAzul"
        android:padding="7dp"
        android:textColor="@color/colorBlanco"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPlomoClaro"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/titulo"
            android:textColor="@color/colorNegro"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/subTitulo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="3dp"
            android:paddingTop="6dp">

            <TextView
                android:layout_width="363dp"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@color/colorNegro" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBlanco"
                android:hint=""
                android:textColor="@color/colorNegro"
                android:textSize="23dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apellido"
                android:textColor="@color/colorNegro" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBlanco"
                android:hint=""
                android:textColor="@color/colorNegro"
                android:textSize="23dp" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/fondo_boton"
            android:text="@string/siguiente"
            android:textColor="@color/colorBlanco"
            android:textSize="10dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/text1"
            android:textColor="@color/colorAzul"
            android:textSize="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/textA"
                android:textColor="@color/colorAzul"
                android:textSize="13dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/textB"
                android:textColor="@color/colorAzul"
                android:textSize="13dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:text="@string/textX"
            android:textSize="13dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/textY"
            android:textColor="@color/colorAzul"
            android:textSize="13dp" />

    </LinearLayout>
</LinearLayout>
